Weather plugin: Precipitance -> Chance of Precipitation, and make it work correctly

--- a/trunk/po/fr.po
+++ b/trunk/po/fr.po
@@ -6256,7 +6256,7 @@ msgid ""
 "<img src=\"icon:weather%i\"> %c<br>\n"
 "Temperature: <b>%t</b> (feels like: <b>%f</b>)<br>\n"
 "Humidity: <b>%h</b><br>\n"
-"Precipitance: <b>%pp %</b><br>\n"
+"Chance of Precipitation: <b>%pp%</b><br>\n"
 "Pressure: <b>%p</b> (%q)<br>\n"
 "Wind: <b>%b</b> <b>%w %g</b><br>\n"
 "Visibility: <b>%v</b><br>\n"
