--- a/trunk/po/ru.po
+++ b/trunk/po/ru.po
@@ -5879,7 +5879,7 @@ msgid ""
 "<img src=\"icon:weather%i\"> %c<br>\n"
 "Temperature: <b>%t</b> (feels like: <b>%f</b>)<br>\n"
 "Humidity: <b>%h</b><br>\n"
-"Precipitance: <b>%pp %</b><br>\n"
+"Chance of Precipitation: <b>%pp%</b><br>\n"
 "Pressure: <b>%p</b> (%q)<br>\n"
 "Wind: <b>%b</b> <b>%w %g</b><br>\n"
 "Visibility: <b>%v</b><br>\n"
@@ -5897,7 +5897,7 @@ msgstr ""
 "<img src=\"icon:weather%i\"> %c<br>\n"
 "Температура: <b>%t</b> (по ощущениям <b>%f</b>)<br>\n"
 "Влажность: <b>%h</b><br>\n"
-"Precipitance: <b>%pp %</b><br>\n"
+"Вероятность осадков: <b>%pp%</b><br>\n"
 "Давление: <b>%a мм.рт.ст.</b> (%q)<br>\n"
 "Ветер: <b>%b</b> <b>%x %y</b><br>\n"
 "Видимость: <b>%v</b><br>\n"
